# AuraPlay

./: .gitignore  LICENSE  README.md  index-player.html  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddToPlaylistButton.tsx  AudioPlayerBar.tsx  DynamicTheme.tsx  ErrorBoundary.tsx  HomeContent.tsx  ImportPlaylistModal.tsx  NowPlayingScreen.tsx  PageHeader.tsx  QueueSidebar.tsx  TrackRow.tsx  UpdateBanner.tsx  VideoPlayer.tsx  Visualizer.tsx  VolumeKnob.tsx  Waveform.tsx
src/context/: AudioContext.tsx  AudioPlayerBar.tsx
src/hooks/: useHistory.ts  useLikes.ts  usePlaylists.ts  useSettings.ts  useStats.ts
src/lib/: dominantColor.ts  queue.ts  rankResults.ts  safeUrl.ts
src/services/: archive.ts  jamendo.ts  lyrics.ts  offline.ts  playlistImport.ts  radio.ts  spotify.ts  spotifyAuth.ts  updater.ts  youtube.ts
src/views/: ArchiveView.tsx  DownloadedView.tsx  FavoritesView.tsx  JamendoView.tsx  PlaylistsView.tsx  RadioView.tsx  SearchView.tsx  SettingsView.tsx  StatsView.tsx  VideosView.tsx
