[package]
name = "auraplay"
version = "0.1.16"
description = "AuraPlay — music & radio player"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "auraplay_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-http = { version = "2.0", features = ["unsafe-headers"] }
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
futures-util = "0.3"


